# discord-decision-mcp

./: .env.example  .gitignore  CLAUDE.md  README.md  decision_triggers.md  mcp.json.example  pyproject.toml
discord_mcp/: __init__.py  config.py  server.py
discord_mcp/bot/: client.py  gateway.py
discord_mcp/daemon/: __init__.py  inbox.py  watcher.py
discord_mcp/decision/: manager.py  parser.py  poller.py  state.py
discord_mcp/tools/: _templates.py  ask.py  delete.py  inbox.py  notify.py  report.py  status.py
docs/: architecture.md
scripts/: start-discord-watch.sh
tests/: test_parser.py  test_state.py
