[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "discord-decision-mcp"
version = "1.0.0"
description = "Discord-based decision system for Claude Code tmux teammate mode"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=0.1.0",
    "httpx>=0.27.0",
    "websockets>=12.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "anyio>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "respx>=0.21.0",      # httpx mocking
]

[project.scripts]
discord-mcp = "discord_mcp.server:main"
discord-watch = "discord_mcp.daemon.watcher:cli"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["discord_mcp"]
